--- a/main.css
+++ b/main.css
@@ -16,14 +16,17 @@ html{
 .sec1{
     width: 100%;
     height: 50%;
-    background:hsl(13, 100%, 72%) url(images/bg-pattern-intro-desktop.svg);
+    background:linear-gradient(135deg,hsl(13, 100%, 72%), hsl(353, 100%, 62%) );
+    border-bottom-left-radius: 6rem;
+    background-repeat: no-repeat;
+}
+.image-background{
+    background: url(images/bg-pattern-intro-desktop.svg);
     background-size:cover;
     overflow: hidden;
     background-position: center;
-    background-size: 150%;
+    background-size: 100%;
     padding: 4rem 10rem;
-    border-bottom-left-radius: 6rem;
-    background-repeat: no-repeat;
 }
 nav{
     width: auto;
@@ -437,15 +440,18 @@ footer{
     }
     .sec1{
         width: 100%;
-        height: 80vh;
-        background:hsl(13, 100%, 72%) url(images/bg-pattern-intro-desktop.svg);
+        height: 50%;
+        background:linear-gradient(135deg,hsl(13, 100%, 72%), hsl(353, 100%, 62%) );
+        border-bottom-left-radius: 6rem;
+        background-repeat: no-repeat;
+    }
+    .image-background{
+        background: url(images/bg-pattern-intro-mobile.svg);
         background-size:cover;
         overflow: hidden;
         background-position: center;
-        background-size: 200%;
-        padding: 2rem 2rem;
-        border-bottom-left-radius: 6rem;
-        background-repeat: no-repeat;
+        background-size: 100%;
+        padding: 4rem 10rem;
     }
     nav{
         justify-content: space-between;
