--- a/main.css
+++ b/main.css
@@ -490,7 +490,7 @@ footer{
         border: none;
         border-radius: .5rem;
         z-index: 10;
-        transition: 1.2s;
+        transition: .5s;
     }
 
     .mobilenav ul li{
